更新文档以解决WebSocket连接问题，添加环境变量配置说明和故障排除步骤，确保前端正确连接到服务器。修改CollaborativeEditor.vue以使用环境变量中的WebSocket地址。

--- a/doc/部署文档.md
+++ b/doc/部署文档.md
@@ -276,6 +276,8 @@ VITE_WS_URL=ws://114.55.138.4:3001
 EOL
 ```
 
+**注意**：确保将`114.55.138.4`替换为您的实际服务器IP地址或域名。这些环境变量非常重要，特别是WebSocket连接地址，如果配置错误会导致协同编辑功能无法正常工作。
+
 ### 4. 构建项目
 
 ```bash
@@ -779,10 +781,48 @@ pm2 logs
 
 - **前端无法访问**: 检查Nginx配置和状态
 - **API请求失败**: 检查后端服务是否正常运行，检查PM2日志
-- **WebSocket连接失败**: 检查防火墙设置，确保端口开放
+- **WebSocket连接失败**: 
+  - 检查防火墙设置，确保端口开放
+  - 检查前端环境变量中的`VITE_WS_URL`是否正确配置为服务器地址
+  - 检查Nginx配置是否正确代理WebSocket连接
+  - 查看浏览器控制台错误信息，常见错误是WebSocket尝试连接到localhost而不是服务器地址
 - **数据库连接问题**: 检查MongoDB服务状态和连接字符串
 
-### 3. 更新部署
+### 3. 解决WebSocket连接错误
+
+如果遇到类似以下错误：
+```
+WebSocket connection to 'ws://localhost:3001/document-xxx' failed
+```
+
+这通常是因为前端代码中WebSocket连接地址配置错误，可以通过以下步骤解决：
+
+1. 确保前端环境变量正确配置：
+```bash
+# 检查前端环境变量文件
+cat /var/www/online-doc/frontend/.env
+
+# 如果不存在或配置错误，创建或修改它
+cat > /var/www/online-doc/frontend/.env << EOL
+VITE_API_URL=http://你的服务器IP:3001/api
+VITE_WS_URL=ws://你的服务器IP:3001
+EOL
+```
+
+2. 修改前端代码中的WebSocket连接：
+```bash
+# 如果环境变量未生效，可以直接修改CollaborativeEditor.vue文件
+sed -i 's|ws://localhost:3001|ws://你的服务器IP:3001|g' /var/www/online-doc/frontend/src/components/CollaborativeEditor.vue
+```
+
+3. 重新构建前端并重启服务：
+```bash
+cd /var/www/online-doc
+pnpm build:frontend
+pm2 reload ecosystem.config.js
+```
+
+### 4. 更新部署
 
 当有新的代码推送到GitHub仓库的main分支时，CI/CD流程会自动触发部署。如果需要手动更新，可以执行以下步骤:
 
