更新.gitignore文件以添加更多忽略规则，确保不必要的文件和目录不被纳入版本控制。同时，更新协同文档编辑系统部署文档，修正格式和内容，使其更清晰易懂，增强了环境准备和配置步骤的可读性。

--- a/doc/部署文档.md
+++ b/doc/部署文档.md
@@ -1,20 +1,22 @@
 # 协同文档编辑系统部署文档
 
 ## 目录
+
 - [环境准备](#环境准备)
 - [服务器配置](#服务器配置)
 - [项目部署](#项目部署)
-- [配置Nginx](#配置nginx)
-- [配置PM2](#配置pm2)
-- [GitHub CI/CD配置](#github-cicd配置)
+- [配置 Nginx](#配置nginx)
+- [配置 PM2](#配置pm2)
+- [GitHub CI/CD 配置](#github-cicd配置)
 - [系统维护](#系统维护)
 - [故障排查](#故障排查)
 
 ## 环境准备
 
 ### 服务器信息
-- IP地址: 114.55.138.4
-- 操作系统: Ubuntu 22.04 64位
+
+- IP 地址: 114.55.138.4
+- 操作系统: Ubuntu 22.04 64 位
 - 项目仓库: [https://github.com/zhourusheng/online-doc](https://github.com/zhourusheng/online-doc)
 
 ## 服务器配置
@@ -33,12 +35,13 @@ apt install git curl wget vim build-essential -y
 ```
 
 验证安装:
+
 ```bash
 git --version
 curl --version
 ```
 
-### 3. 安装Node.js环境
+### 3. 安装 Node.js 环境
 
 ```bash
 curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
@@ -46,23 +49,25 @@ apt install -y nodejs
 ```
 
 验证安装:
+
 ```bash
 node -v  # 应显示v20.x.x
 npm -v   # 应显示npm版本
 ```
 
-### 4. 安装PNPM
+### 4. 安装 PNPM
 
 ```bash
 npm install -g pnpm@latest
 ```
 
 验证安装:
+
 ```bash
 pnpm -v  # 应显示pnpm版本
 ```
 
-### 5. 安装MongoDB
+### 5. 安装 MongoDB
 
 ```bash
 # 导入MongoDB 6.0的公钥
@@ -81,30 +86,34 @@ apt update
 apt install -y mongodb-org
 ```
 
-启动MongoDB服务:
+启动 MongoDB 服务:
+
 ```bash
 systemctl start mongod
 systemctl enable mongod
 ```
 
-验证MongoDB安装:
+验证 MongoDB 安装:
+
 ```bash
 systemctl status mongod  # 应显示"active (running)"
 ```
 
-### 6. 安装Nginx
+### 6. 安装 Nginx
 
 ```bash
 apt install -y nginx
 ```
 
-启动Nginx:
+启动 Nginx:
+
 ```bash
 systemctl start nginx
 systemctl enable nginx
 ```
 
-验证Nginx安装:
+验证 Nginx 安装:
+
 ```bash
 systemctl status nginx  # 应显示"active (running)"
 ```
@@ -114,6 +123,7 @@ systemctl status nginx  # 应显示"active (running)"
 ### 1. 克隆项目代码
 
 创建项目目录：
+
 ```bash
 mkdir -p /var/www
 cd /var/www
@@ -121,7 +131,8 @@ cd /var/www
 
 尝试以下方法之一获取代码：
 
-**方法1：使用HTTPS克隆（可能需要配置Git）**
+**方法 1：使用 HTTPS 克隆（可能需要配置 Git）**
+
 ```bash
 # 配置Git使用更长的超时时间
 git config --global http.lowSpeedLimit 1000
@@ -131,12 +142,14 @@ git config --global http.lowSpeedTime 300
 git clone https://github.com/zhourusheng/online-doc
 ```
 
-**方法2：使用SSH克隆（如果您有GitHub SSH密钥）**
+**方法 2：使用 SSH 克隆（如果您有 GitHub SSH 密钥）**
+
 ```bash
 git clone git@github.com:zhourusheng/online-doc.git
 ```
 
-**方法3：下载ZIP文件并解压**
+**方法 3：下载 ZIP 文件并解压**
+
 ```bash
 # 安装unzip工具
 apt install -y unzip
@@ -151,7 +164,8 @@ unzip online-doc.zip
 mv online-doc-main online-doc
 ```
 
-**方法4：使用代理克隆（如果存在网络限制）**
+**方法 4：使用代理克隆（如果存在网络限制）**
+
 ```bash
 # 设置HTTP代理
 export http_proxy=http://您的代理服务器:端口
@@ -162,25 +176,29 @@ git clone https://github.com/zhourusheng/online-doc
 ```
 
 成功获取代码后：
+
 ```bash
 cd online-doc
 ```
 
 **故障排除**：
-- 如果遇到SSL/TLS错误，可能需要更新ca-certificates：`apt install -y ca-certificates`
-- 如果GitHub访问受限，考虑使用镜像站点或通过其他方式获取代码
+
+- 如果遇到 SSL/TLS 错误，可能需要更新 ca-certificates：`apt install -y ca-certificates`
+- 如果 GitHub 访问受限，考虑使用镜像站点或通过其他方式获取代码
 
 ### 2. 安装项目依赖
 
-项目使用pnpm工作区管理前端和后端两个子项目。安装依赖有两种方式：
+项目使用 pnpm 工作区管理前端和后端两个子项目。安装依赖有两种方式：
 
-**方式1：一次性安装所有依赖（推荐）**
+**方式 1：一次性安装所有依赖（推荐）**
+
 ```bash
 cd /var/www/online-doc
 pnpm install
 ```
 
-**方式2：分别安装前端和后端依赖**
+**方式 2：分别安装前端和后端依赖**
+
 ```bash
 # 安装前端依赖
 cd /var/www/online-doc/frontend
@@ -194,6 +212,7 @@ pnpm install
 **解决网络超时问题**
 
 如果遇到类似以下错误：
+
 ```
 WARN  GET https://registry.npmjs.org/xxx error (ERR_SOCKET_TIMEOUT)
 ```
@@ -212,37 +231,8 @@ pnpm install --ignore-scripts --network-timeout 100000
 pnpm install --offline
 ```
 
-**解决对等依赖(peer dependencies)问题**
-
-如果看到缺少对等依赖的警告：
-
-```bash
-# 安装缺少的核心依赖
-pnpm add -W @tiptap/core@^2.7.0 @tiptap/pm@^2.7.0 yjs@^13.5.6 prosemirror-model@^1.7.1 prosemirror-state@^1.2.3 prosemirror-view@^1.9.10 y-protocols@^1.0.1
-```
-
-**解决esbuild版本冲突问题**
-
-如果遇到类似以下错误：
-```
-Error: Expected "0.25.5" but got "0.21.5"
-```
-
-可以尝试以下解决方案：
-
-```bash
-# 方案1：使用--ignore-scripts跳过postinstall脚本
-pnpm install --ignore-scripts
-
-# 方案2：手动安装兼容的esbuild版本
-pnpm add -D esbuild@0.21.5 --workspace
-
-# 方案3：修复锁文件并重新安装
-rm pnpm-lock.yaml
-pnpm install --force
-```
-
 验证依赖安装：
+
 ```bash
 # 检查前端node_modules
 ls -la frontend/node_modules
@@ -252,31 +242,11 @@ ls -la backend/node_modules
 ```
 
 如果遇到其他依赖安装问题，可以尝试清除缓存后重新安装：
+
 ```bash
 pnpm store prune
 pnpm install --force
 ```
-
-### 3. 配置环境变量
-
-为后端创建环境变量文件:
-```bash
-cat > /var/www/online-doc/backend/.env << EOL
-PORT=3001
-MONGODB_URI=mongodb://localhost:27017/online-doc
-JWT_SECRET=$(openssl rand -hex 32)
-EOL
-```
-
-为前端创建环境变量文件:
-```bash
-cat > /var/www/online-doc/frontend/.env << EOL
-VITE_API_URL=http://114.55.138.4:3001/api
-VITE_WS_URL=ws://114.55.138.4:3001
-EOL
-```
-
-**注意**：确保将`114.55.138.4`替换为您的实际服务器IP地址或域名。这些环境变量非常重要，特别是WebSocket连接地址，如果配置错误会导致协同编辑功能无法正常工作。
 
 ### 4. 构建项目
 
@@ -285,190 +255,30 @@ cd /var/www/online-doc
 pnpm build
 ```
 
-**解决vue-tsc构建错误**
-
-如果遇到类似以下错误：
-```
-tsconfig.json(10,5): error TS5070: Option '--resolveJsonModule' cannot be specified without 'node' module resolution strategy.
-```
-
-这是TypeScript配置问题，可以尝试以下解决方案：
-
-```bash
-# 方案1：修改前端tsconfig.json文件
-cd /var/www/online-doc/frontend
-cat > tsconfig.json << EOL
-{
-  "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-    "moduleResolution": "node", // 确保使用node解析策略
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": false
-  },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
-}
-EOL
-
-# 修改tsconfig.node.json文件
-cat > tsconfig.node.json << EOL
-{
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.ts"]
-}
-EOL
-
-# 方案2：跳过TypeScript检查，直接构建前端
-cd /var/www/online-doc/frontend
-sed -i 's/"build": "vue-tsc && vite build"/"build": "vite build"/g' package.json
-pnpm build
-```
-
-**解决Tailwind CSS prose类错误**
-
-如果遇到类似以下错误：
-```
-The `prose` class does not exist. If `prose` is a custom class, make sure it is defined within a `@layer` directive.
-```
-
-这是因为缺少Tailwind CSS的typography插件，可以通过以下步骤解决：
-
-```bash
-# 安装typography插件
-cd /var/www/online-doc/frontend
-pnpm add -D @tailwindcss/typography
-
-# 修改tailwind.config.js文件
-cat > tailwind.config.js << EOL
-/** @type {import('tailwindcss').Config} */
-export default {
-  content: [
-    "./index.html",
-    "./src/**/*.{vue,js,ts,jsx,tsx}",
-  ],
-  theme: {
-    extend: {},
-  },
-  plugins: [
-    require('@tailwindcss/typography'),
-  ],
-}
-EOL
-```
-
-如果上述方法不起作用，可以尝试以下方案：
-
-```bash
-# 方案3：安装兼容的TypeScript和vue-tsc版本
-cd /var/www/online-doc
-pnpm add -D typescript@~5.0.4 vue-tsc@^1.8.0 --workspace frontend
-pnpm build
-```
-
-**解决后端构建中的esbuild版本问题**
-
-如果遇到类似以下错误：
-```
-[ERROR] Cannot start service: Host version "0.25.5" does not match binary version "0.21.5"
-```
-
-可以尝试以下解决方案：
-
-```bash
-# 方案1：手动构建TypeScript文件（最可靠的方法）
-cd /var/www/online-doc/backend
-mkdir -p dist
-npx tsc --project tsconfig.json --outDir dist
-
-# 方案2：强制安装统一版本的esbuild
-cd /var/www/online-doc
-pnpm remove esbuild -r  # 移除所有esbuild依赖
-pnpm add -D esbuild@0.21.5 -w  # 在工作区级别安装统一版本
-cd backend
-pnpm build
-
-# 方案3：创建简单的构建脚本绕过tsup
-cat > /var/www/online-doc/backend/build.js << EOL
-const { execSync } = require('child_process');
-const fs = require('fs');
-const path = require('path');
-
-// 确保dist目录存在
-if (!fs.existsSync('dist')) {
-  fs.mkdirSync('dist');
-}
-
-// 编译TypeScript文件
-console.log('Compiling TypeScript files...');
-execSync('npx tsc --project tsconfig.json --outDir dist', { stdio: 'inherit' });
-
-// 复制必要的非TS文件（如果有的话）
-console.log('Copying additional files...');
-// 例如: fs.copyFileSync('src/some-file.json', 'dist/some-file.json');
-
-console.log('Build completed successfully!');
-EOL
-
-# 修改package.json中的构建命令
-sed -i 's/"build": "tsup src\/index.ts --format cjs --clean"/"build": "node build.js"/g' package.json
-pnpm build
-```
-
-如果以上方法都不起作用，可以尝试直接使用前端构建产物和手动构建的后端代码：
-
-```bash
-# 确保前端已构建
-cd /var/www/online-doc/frontend
-pnpm exec vite build
-
-# 手动构建后端
-cd /var/www/online-doc/backend
-mkdir -p dist
-npx tsc --project tsconfig.json --outDir dist
-
-# 验证构建结果
-ls -la ../frontend/dist
-ls -la dist
-```
-
 验证构建是否成功:
+
 ```bash
 ls -la frontend/dist  # 应该看到构建后的前端文件
 ls -la backend/dist   # 应该看到构建后的后端文件
 ```
 
-## 配置Nginx
+## 配置 Nginx
 
-### 1. 创建Nginx配置文件
+### 1. 创建 Nginx 配置文件
 
 ```bash
 cat > /etc/nginx/sites-available/online-doc << EOL
 server {
     listen 80;
     server_name 114.55.138.4;  # 使用服务器IP或域名
-    
+
     # 前端静态文件
     location / {
         root /var/www/online-doc/frontend/dist;
         index index.html;
         try_files \$uri \$uri/ /index.html;
     }
-    
+
     # 后端API代理
     location /api {
         proxy_pass http://localhost:3001;
@@ -478,7 +288,7 @@ server {
         proxy_set_header Host \$host;
         proxy_cache_bypass \$http_upgrade;
     }
-    
+
     # WebSocket代理
     location /ws {
         proxy_pass http://localhost:3001;
@@ -500,36 +310,12 @@ nginx -t  # 测试配置是否正确
 systemctl restart nginx
 ```
 
-## 配置PM2
+## 配置 PM2
 
-### 1. 安装PM2
+### 1. 安装 PM2
 
 ```bash
 npm install -g pm2
-```
-
-### 2. 创建PM2配置文件
-
-```bash
-cat > /var/www/online-doc/ecosystem.config.js << EOL
-module.exports = {
-  apps: [{
-    name: 'online-doc-backend',
-    script: '/var/www/online-doc/backend/dist/index.js',
-    env: {
-      NODE_ENV: 'production',
-      PORT: 3001,
-      MONGODB_URI: 'mongodb://localhost:27017/online-doc',
-      JWT_SECRET: '$(grep JWT_SECRET /var/www/online-doc/backend/.env | cut -d= -f2)'
-    },
-    instances: 1,
-    autorestart: true,
-    watch: false,
-    max_memory_restart: '1G',
-    node_args: '--max-old-space-size=2048' // 为Node.js增加内存限制
-  }]
-};
-EOL
 ```
 
 ### 3. 启动后端服务
@@ -542,6 +328,7 @@ pm2 startup
 ```
 
 验证后端服务是否正常运行:
+
 ```bash
 pm2 status  # 应显示"online"状态
 curl http://localhost:3001/api  # 测试API是否响应
@@ -558,13 +345,14 @@ ufw enable
 ```
 
 验证防火墙配置:
+
 ```bash
 ufw status  # 应显示允许的服务
 ```
 
-## GitHub CI/CD配置
+## GitHub CI/CD 配置
 
-为了实现自动化部署，我们可以使用GitHub Actions来设置CI/CD流程。下面是配置步骤：
+为了实现自动化部署，我们可以使用 GitHub Actions 来设置 CI/CD 流程。下面是配置步骤：
 
 ### 1. 在服务器上创建部署密钥
 
@@ -579,13 +367,13 @@ cat ~/.ssh/github-actions-deploy.pub >> ~/.ssh/authorized_keys
 cat ~/.ssh/github-actions-deploy
 ```
 
-### 2. 在GitHub仓库中添加Secrets
+### 2. 在 GitHub 仓库中添加 Secrets
 
-在GitHub仓库页面，进入 Settings -> Secrets and variables -> Actions，添加以下Secrets：
+在 GitHub 仓库页面，进入 Settings -> Secrets and variables -> Actions，添加以下 Secrets：
 
-> **注意**：Secret名称只能包含字母数字字符([a-z], [A-Z], [0-9])或下划线(_)，不允许有空格，且必须以字母([a-z], [A-Z])或下划线(_)开头。
+> **注意**：Secret 名称只能包含字母数字字符([a-z], [A-Z], [0-9])或下划线(_)，不允许有空格，且必须以字母([a-z], [A-Z])或下划线(_)开头。
 
-添加以下Secrets：
+添加以下 Secrets：
 
 - `SERVER_HOST`: 114.55.138.4
 - `SERVER_USERNAME`: root
@@ -593,13 +381,14 @@ cat ~/.ssh/github-actions-deploy
 - `SERVER_DEPLOY_PATH`: /var/www/online-doc
 
 添加步骤：
+
 1. 点击"New repository secret"按钮
-2. 在"Name"字段中输入Secret名称（如`SERVER_HOST`）
+2. 在"Name"字段中输入 Secret 名称（如`SERVER_HOST`）
 3. 在"Value"字段中输入对应的值
 4. 点击"Add secret"按钮保存
-5. 重复上述步骤添加所有必要的Secrets
+5. 重复上述步骤添加所有必要的 Secrets
 
-### 3. 创建GitHub Actions工作流文件
+### 3. 创建 GitHub Actions 工作流文件
 
 在项目根目录创建 `.github/workflows/deploy.yml` 文件：
 
@@ -623,23 +412,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          
+
       - name: Setup PNPM
         uses: pnpm/action-setup@v2
         with:
           version: latest
           run_install: false
-          
+
       - name: Get pnpm store directory
         id: pnpm-cache
         run: |
           echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-          
+
       - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
@@ -647,16 +436,16 @@ jobs:
           key: \${{ runner.os }}-pnpm-store-\${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             \${{ runner.os }}-pnpm-store-
-            
+
       - name: Install dependencies
         run: pnpm install
-        
+
       - name: Build frontend
         run: pnpm build:frontend
-        
+
       - name: Build backend
         run: pnpm build:backend
-        
+
       - name: Deploy to server
         uses: appleboy/scp-action@master
         with:
@@ -666,7 +455,7 @@ jobs:
           source: "frontend/dist/,backend/dist/,package.json,pnpm-lock.yaml,pnpm-workspace.yaml"
           target: "\${{ secrets.SERVER_DEPLOY_PATH }}"
           strip_components: 0
-          
+
       - name: Restart application
         uses: appleboy/ssh-action@master
         with:
@@ -680,7 +469,7 @@ jobs:
 EOL
 ```
 
-### 4. 提交并推送工作流文件到GitHub
+### 4. 提交并推送工作流文件到 GitHub
 
 ```bash
 cd /var/www/online-doc
@@ -689,9 +478,9 @@ git commit -m "Add GitHub Actions workflow for CI/CD"
 git push
 ```
 
-### 5. 验证CI/CD流程
+### 5. 验证 CI/CD 流程
 
-1. 在GitHub仓库页面，进入Actions标签页
+1. 在 GitHub 仓库页面，进入 Actions 标签页
 2. 应该能看到工作流已经开始运行
 3. 等待工作流完成，检查部署是否成功
 4. 访问 http://114.55.138.4 验证应用是否正常工作
@@ -701,6 +490,7 @@ git push
 ### 1. 设置自动备份
 
 创建备份脚本:
+
 ```bash
 cat > /root/backup.sh << EOL
 #!/bin/bash
@@ -724,7 +514,8 @@ EOL
 chmod +x /root/backup.sh
 ```
 
-添加到crontab定时任务:
+添加到 crontab 定时任务:
+
 ```bash
 (crontab -l 2>/dev/null; echo "0 2 * * * /root/backup.sh") | crontab -
 ```
@@ -732,6 +523,7 @@ chmod +x /root/backup.sh
 ### 2. 设置日志轮转
 
 创建日志轮转配置:
+
 ```bash
 cat > /etc/logrotate.d/online-doc << EOL
 /var/www/online-doc/logs/*.log {
@@ -750,16 +542,16 @@ cat > /etc/logrotate.d/online-doc << EOL
 EOL
 ```
 
-### 3. 配置SSL（推荐）
+### 3. 配置 SSL（推荐）
 
-如果您有域名，建议配置HTTPS:
+如果您有域名，建议配置 HTTPS:
 
 ```bash
 apt install -y certbot python3-certbot-nginx
 certbot --nginx -d 您的域名
 ```
 
-按照提示完成SSL证书的安装，并更新前端环境变量以使用https和wss协议。
+按照提示完成 SSL 证书的安装，并更新前端环境变量以使用 https 和 wss 协议。
 
 ## 故障排查
 
@@ -779,25 +571,27 @@ pm2 logs
 
 ### 2. 常见问题解决方案
 
-- **前端无法访问**: 检查Nginx配置和状态
-- **API请求失败**: 检查后端服务是否正常运行，检查PM2日志
-- **WebSocket连接失败**: 
+- **前端无法访问**: 检查 Nginx 配置和状态
+- **API 请求失败**: 检查后端服务是否正常运行，检查 PM2 日志
+- **WebSocket 连接失败**:
   - 检查防火墙设置，确保端口开放
   - 检查前端环境变量中的`VITE_WS_URL`是否正确配置为服务器地址
-  - 检查Nginx配置是否正确代理WebSocket连接
-  - 查看浏览器控制台错误信息，常见错误是WebSocket尝试连接到localhost而不是服务器地址
-- **数据库连接问题**: 检查MongoDB服务状态和连接字符串
+  - 检查 Nginx 配置是否正确代理 WebSocket 连接
+  - 查看浏览器控制台错误信息，常见错误是 WebSocket 尝试连接到 localhost 而不是服务器地址
+- **数据库连接问题**: 检查 MongoDB 服务状态和连接字符串
 
-### 3. 解决WebSocket连接错误
+### 3. 解决 WebSocket 连接错误
 
 如果遇到类似以下错误：
+
 ```
 WebSocket connection to 'ws://localhost:3001/document-xxx' failed
 ```
 
-这通常是因为前端代码中WebSocket连接地址配置错误，可以通过以下步骤解决：
+这通常是因为前端代码中 WebSocket 连接地址配置错误，可以通过以下步骤解决：
 
 1. 确保前端环境变量正确配置：
+
 ```bash
 # 检查前端环境变量文件
 cat /var/www/online-doc/frontend/.env
@@ -809,13 +603,15 @@ VITE_WS_URL=ws://你的服务器IP:3001
 EOL
 ```
 
-2. 修改前端代码中的WebSocket连接：
+2. 修改前端代码中的 WebSocket 连接：
+
 ```bash
 # 如果环境变量未生效，可以直接修改CollaborativeEditor.vue文件
 sed -i 's|ws://localhost:3001|ws://你的服务器IP:3001|g' /var/www/online-doc/frontend/src/components/CollaborativeEditor.vue
 ```
 
 3. 重新构建前端并重启服务：
+
 ```bash
 cd /var/www/online-doc
 pnpm build:frontend
@@ -824,7 +620,7 @@ pm2 reload ecosystem.config.js
 
 ### 4. 更新部署
 
-当有新的代码推送到GitHub仓库的main分支时，CI/CD流程会自动触发部署。如果需要手动更新，可以执行以下步骤:
+当有新的代码推送到 GitHub 仓库的 main 分支时，CI/CD 流程会自动触发部署。如果需要手动更新，可以执行以下步骤:
 
 ```bash
 cd /var/www/online-doc
@@ -836,4 +632,4 @@ pm2 reload ecosystem.config.js
 
 ---
 
-部署完成后，您的协同文档编辑系统已经成功部署并配置了自动化CI/CD流程。用户可以通过访问 `http://114.55.138.4` 或您的域名使用系统。 
+部署完成后，您的协同文档编辑系统已经成功部署并配置了自动化 CI/CD 流程。用户可以通过访问 `http://114.55.138.4` 或您的域名使用系统。
