更新协同文档编辑系统的部署文档，添加环境变量配置说明，确保用户在部署前确认配置的正确性。同时，优化Nginx和PM2配置步骤，简化前端请求逻辑，统一使用request工具进行API调用，提升代码可读性和维护性。

--- a/doc/部署文档.md
+++ b/doc/部署文档.md
@@ -248,6 +248,28 @@ pnpm store prune
 pnpm install --force
 ```
 
+### 3. 配置环境变量
+
+项目中的环境变量文件 backend/.env 和 frontend/.env 已经在代码库中创建好，无需在服务器上重新创建。
+
+部署前请确认这些文件包含正确的配置：
+- backend/.env 应包含：
+  ```
+  PORT=3001
+  MONGODB_URI=mongodb://localhost:27017/online-doc
+  JWT_SECRET=您的密钥
+  ```
+
+- frontend/.env 应包含：
+  ```
+  VITE_API_URL=http://114.55.138.4:3001/api
+  VITE_WS_URL=ws://114.55.138.4:3001
+  ```
+
+**注意**：确保将`114.55.138.4`替换为您的实际服务器IP地址或域名。这些环境变量非常重要，特别是WebSocket连接地址，如果配置错误会导致协同编辑功能无法正常工作。
+
+如需修改这些配置，请在本地修改后提交到代码库。
+
 ### 4. 构建项目
 
 ```bash
@@ -255,8 +277,9 @@ cd /var/www/online-doc
 pnpm build
 ```
 
-验证构建是否成功:
+**注意**：项目已移除 vue-tsc，前端构建直接使用 Vite 构建，无需解决 vue-tsc 相关问题。
 
+验证构建是否成功:
 ```bash
 ls -la frontend/dist  # 应该看到构建后的前端文件
 ls -la backend/dist   # 应该看到构建后的后端文件
@@ -266,48 +289,61 @@ ls -la backend/dist   # 应该看到构建后的后端文件
 
 ### 1. 创建 Nginx 配置文件
 
+在本地项目目录中创建 Nginx 配置文件：
+
 ```bash
-cat > /etc/nginx/sites-available/online-doc << EOL
+# 在本地项目目录中创建 nginx 配置目录
+mkdir -p config/nginx
+```
+
+创建 config/nginx/online-doc.conf 文件，内容如下：
+
+```
 server {
     listen 80;
     server_name 114.55.138.4;  # 使用服务器IP或域名
-
+    
     # 前端静态文件
     location / {
         root /var/www/online-doc/frontend/dist;
         index index.html;
-        try_files \$uri \$uri/ /index.html;
+        try_files $uri $uri/ /index.html;
     }
-
+    
     # 后端API代理
     location /api {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade \$http_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host \$host;
-        proxy_cache_bypass \$http_upgrade;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
-
+    
     # WebSocket代理
     location /ws {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade \$http_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-        proxy_set_header Host \$host;
+        proxy_set_header Host $host;
     }
 }
-EOL
 ```
 
-### 2. 启用配置
+### 2. 将Nginx配置文件部署到服务器
+
+在服务器上执行以下命令：
 
 ```bash
-ln -s /etc/nginx/sites-available/online-doc /etc/nginx/sites-enabled/
-rm /etc/nginx/sites-enabled/default  # 删除默认配置
-nginx -t  # 测试配置是否正确
-systemctl restart nginx
+# 将本地配置文件复制到服务器
+scp config/nginx/online-doc.conf root@114.55.138.4:/etc/nginx/sites-available/online-doc
+
+# 在服务器上启用配置
+ssh root@114.55.138.4 "ln -s /etc/nginx/sites-available/online-doc /etc/nginx/sites-enabled/ && \
+rm /etc/nginx/sites-enabled/default && \
+nginx -t && \
+systemctl restart nginx"
 ```
 
 ## 配置 PM2
@@ -318,7 +354,36 @@ systemctl restart nginx
 npm install -g pm2
 ```
 
+### 2. 创建 PM2 配置文件
+
+在本地项目目录中创建 PM2 配置文件：
+
+```javascript
+// ecosystem.config.js 文件内容如下
+module.exports = {
+  apps: [{
+    name: 'online-doc-backend',
+    script: '/var/www/online-doc/backend/dist/index.js',
+    env: {
+      NODE_ENV: 'production',
+      PORT: 3001,
+      MONGODB_URI: 'mongodb://localhost:27017/online-doc',
+      JWT_SECRET: '您的JWT密钥' // 请替换为实际的JWT密钥
+    },
+    instances: 1,
+    autorestart: true,
+    watch: false,
+    max_memory_restart: '1G',
+    node_args: '--max-old-space-size=2048' // 为Node.js增加内存限制
+  }]
+};
+```
+
+**注意**：请确保将JWT_SECRET替换为实际使用的密钥。此文件已经存在于项目根目录中，无需在服务器上重新创建。
+
 ### 3. 启动后端服务
+
+在服务器上执行以下命令：
 
 ```bash
 cd /var/www/online-doc
@@ -390,16 +455,16 @@ cat ~/.ssh/github-actions-deploy
 
 ### 3. 创建 GitHub Actions 工作流文件
 
-在项目根目录创建 `.github/workflows/deploy.yml` 文件：
+在本地项目根目录创建 `.github/workflows` 目录和 `deploy.yml` 文件：
 
 ```bash
-mkdir -p /var/www/online-doc/.github/workflows
+# 在本地项目目录中创建工作流目录
+mkdir -p .github/workflows
 ```
 
-编辑工作流文件：
+编辑工作流文件 `.github/workflows/deploy.yml`：
 
-```bash
-cat > /var/www/online-doc/.github/workflows/deploy.yml << EOL
+```yaml
 name: Deploy Online Doc
 
 on:
@@ -412,61 +477,60 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-
+          
       - name: Setup PNPM
         uses: pnpm/action-setup@v2
         with:
           version: latest
           run_install: false
-
+          
       - name: Get pnpm store directory
         id: pnpm-cache
         run: |
           echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-
+          
       - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
-          path: \${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-          key: \${{ runner.os }}-pnpm-store-\${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            \${{ runner.os }}-pnpm-store-
-
+            ${{ runner.os }}-pnpm-store-
+            
       - name: Install dependencies
         run: pnpm install
-
+        
       - name: Build frontend
         run: pnpm build:frontend
-
+        
       - name: Build backend
         run: pnpm build:backend
-
+        
       - name: Deploy to server
         uses: appleboy/scp-action@master
         with:
-          host: \${{ secrets.SERVER_HOST }}
-          username: \${{ secrets.SERVER_USERNAME }}
-          key: \${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "frontend/dist/,backend/dist/,package.json,pnpm-lock.yaml,pnpm-workspace.yaml"
-          target: "\${{ secrets.SERVER_DEPLOY_PATH }}"
+          target: "${{ secrets.SERVER_DEPLOY_PATH }}"
           strip_components: 0
-
+          
       - name: Restart application
         uses: appleboy/ssh-action@master
         with:
-          host: \${{ secrets.SERVER_HOST }}
-          username: \${{ secrets.SERVER_USERNAME }}
-          key: \${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd \${{ secrets.SERVER_DEPLOY_PATH }}
+            cd ${{ secrets.SERVER_DEPLOY_PATH }}
             pnpm install --prod
             pm2 reload ecosystem.config.js
-EOL
 ```
 
 ### 4. 提交并推送工作流文件到 GitHub
@@ -571,52 +635,123 @@ pm2 logs
 
 ### 2. 常见问题解决方案
 
-- **前端无法访问**: 检查 Nginx 配置和状态
-- **API 请求失败**: 检查后端服务是否正常运行，检查 PM2 日志
-- **WebSocket 连接失败**:
+- **前端无法访问**: 检查Nginx配置和状态
+- **API请求失败**: 检查后端服务是否正常运行，检查PM2日志
+- **WebSocket连接失败**: 
   - 检查防火墙设置，确保端口开放
   - 检查前端环境变量中的`VITE_WS_URL`是否正确配置为服务器地址
-  - 检查 Nginx 配置是否正确代理 WebSocket 连接
-  - 查看浏览器控制台错误信息，常见错误是 WebSocket 尝试连接到 localhost 而不是服务器地址
-- **数据库连接问题**: 检查 MongoDB 服务状态和连接字符串
+  - 检查Nginx配置是否正确代理WebSocket连接
+  - 查看浏览器控制台错误信息，常见错误是WebSocket尝试连接到localhost而不是服务器地址
 
-### 3. 解决 WebSocket 连接错误
+### 3. 解决WebSocket连接错误
 
-如果遇到类似以下错误：
-
+如果在浏览器控制台看到类似以下错误：
 ```
-WebSocket connection to 'ws://localhost:3001/document-xxx' failed
+WebSocket connection to 'ws://114.55.138.4:3001/document-xxx' failed
 ```
 
-这通常是因为前端代码中 WebSocket 连接地址配置错误，可以通过以下步骤解决：
+这可能是由以下原因导致：
 
-1. 确保前端环境变量正确配置：
+1. **防火墙阻止WebSocket连接**（最常见原因）：
+   
+   确保服务器防火墙允许3001端口的TCP连接：
+   ```bash
+   # 检查当前防火墙规则
+   sudo ufw status
+   
+   # 如果3001端口未开放，添加规则允许该端口
+   sudo ufw allow 3001/tcp
+   
+   # 重新加载防火墙规则
+   sudo ufw reload
+   ```
+   
+   如果使用阿里云、腾讯云等云服务器，还需要在云服务控制台的安全组中添加入站规则，允许3001端口的TCP连接。
+   
+   阿里云安全组配置步骤：
+   1. 登录阿里云控制台
+   2. 进入ECS实例详情页
+   3. 点击"安全组" -> "配置规则"
+   4. 添加入方向规则：协议类型TCP，端口范围3001/3001，授权对象0.0.0.0/0
 
-```bash
-# 检查前端环境变量文件
-cat /var/www/online-doc/frontend/.env
+2. **Nginx配置问题**：
+   检查Nginx配置文件中的WebSocket代理设置是否正确：
+   ```
+   # 确保有正确的WebSocket代理配置
+   location /ws {
+       proxy_pass http://localhost:3001;
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection "Upgrade";
+       proxy_set_header Host $host;
+       proxy_read_timeout 300s;  # 增加超时时间防止长连接断开
+       proxy_send_timeout 300s;
+   }
+   ```
 
-# 如果不存在或配置错误，创建或修改它
-cat > /var/www/online-doc/frontend/.env << EOL
-VITE_API_URL=http://你的服务器IP:3001/api
-VITE_WS_URL=ws://你的服务器IP:3001
-EOL
-```
+3. **环境变量配置**：
+   确保前端项目的`.env`文件中正确配置了WebSocket URL：
+   ```
+   # 在本地项目的frontend/.env文件中
+   VITE_API_URL=http://114.55.138.4:3001/api
+   VITE_WS_URL=ws://114.55.138.4:3001
+   ```
+   
+   修改后需要重新构建前端并部署：
+   ```bash
+   cd /var/www/online-doc
+   pnpm build:frontend
+   # 然后通过CI/CD部署或手动部署
+   ```
 
-2. 修改前端代码中的 WebSocket 连接：
+4. **后端WebSocket服务未正常运行**：
+   检查后端服务日志：
+   ```bash
+   pm2 logs online-doc-backend
+   ```
+   
+   确保后端服务正确监听WebSocket连接：
+   ```bash
+   # 检查是否有进程监听3001端口
+   netstat -tulpn | grep 3001
+   ```
 
-```bash
-# 如果环境变量未生效，可以直接修改CollaborativeEditor.vue文件
-sed -i 's|ws://localhost:3001|ws://你的服务器IP:3001|g' /var/www/online-doc/frontend/src/components/CollaborativeEditor.vue
-```
+5. **CORS问题**：
+   确保后端的CORS设置允许来自前端域名的WebSocket连接：
+   ```javascript
+   // 在backend/src/index.ts中
+   app.use(cors({
+     origin: ['http://114.55.138.4', 'https://your-domain.com'],
+     credentials: true
+   }));
+   ```
 
-3. 重新构建前端并重启服务：
+6. **连接超时**：
+   如果WebSocket连接尝试建立但超时，可能是网络延迟问题。可以尝试增加连接超时时间：
+   ```javascript
+   // 在前端的CollaborativeEditor.vue中
+   provider = new WebsocketProvider(
+     import.meta.env.VITE_WS_URL || 'ws://localhost:3001', 
+     `document-${props.documentId}`, 
+     ydoc,
+     { 
+       params,
+       connect: true,
+       maxBackoffTime: 10000 // 增加最大重连等待时间
+     }
+   )
+   ```
 
-```bash
-cd /var/www/online-doc
-pnpm build:frontend
-pm2 reload ecosystem.config.js
-```
+7. **直接使用端口访问而不通过Nginx代理**：
+   如果上述方法都不起作用，可以尝试直接使用3001端口连接WebSocket，绕过Nginx代理：
+   ```
+   # 修改前端环境变量
+   VITE_WS_URL=ws://114.55.138.4:3001
+   ```
+   
+   并确保服务器防火墙和云服务安全组都允许3001端口的访问。
+
+实施上述解决方案后，重启服务并刷新浏览器页面，WebSocket连接问题应该得到解决。
 
 ### 4. 更新部署
 
