--- a/doc/部署文档.md
+++ b/doc/部署文档.md
@@ -447,11 +447,31 @@ cat ~/.ssh/github-actions-deploy
 
 添加步骤：
 
-1. 点击"New repository secret"按钮
-2. 在"Name"字段中输入 Secret 名称（如`SERVER_HOST`）
-3. 在"Value"字段中输入对应的值
-4. 点击"Add secret"按钮保存
-5. 重复上述步骤添加所有必要的 Secrets
+1. 登录 GitHub，进入项目仓库
+2. 点击仓库顶部的 **Settings** 选项卡
+3. 在左侧菜单中，找到并点击 **Secrets and variables** → **Actions**
+4. 点击 **New repository secret** 按钮
+5. 添加以下四个 Secrets：
+
+   **第一个 Secret**
+   - Name: `SERVER_HOST`
+   - Secret: 您的服务器 IP 地址（例如：`114.55.138.4`）
+   - 点击 **Add secret** 保存
+
+   **第二个 Secret**
+   - Name: `SERVER_USERNAME`
+   - Secret: 您的服务器登录用户名（例如：`root`）
+   - 点击 **Add secret** 保存
+
+   **第三个 Secret**
+   - Name: `SSH_PRIVATE_KEY`
+   - Secret: 您的 SSH 私钥内容，需要包含完整的私钥，包括开头的 `-----BEGIN OPENSSH PRIVATE KEY-----` 和结尾的 `-----END OPENSSH PRIVATE KEY-----`
+   - 点击 **Add secret** 保存
+
+   **第四个 Secret**
+   - Name: `SERVER_DEPLOY_PATH`
+   - Secret: 服务器上的部署路径（例如：`/var/www/online-doc`）
+   - 点击 **Add secret** 保存
 
 ### 3. 创建 GitHub Actions 工作流文件
 
@@ -577,194 +597,3 @@ EOL
 
 chmod +x /root/backup.sh
 ```
-
-添加到 crontab 定时任务:
-
-```bash
-(crontab -l 2>/dev/null; echo "0 2 * * * /root/backup.sh") | crontab -
-```
-
-### 2. 设置日志轮转
-
-创建日志轮转配置:
-
-```bash
-cat > /etc/logrotate.d/online-doc << EOL
-/var/www/online-doc/logs/*.log {
-    daily
-    missingok
-    rotate 14
-    compress
-    delaycompress
-    notifempty
-    create 0640 root root
-    sharedscripts
-    postrotate
-        [ -f /var/run/nginx.pid ] && kill -USR1 \`cat /var/run/nginx.pid\`
-    endscript
-}
-EOL
-```
-
-### 3. 配置 SSL（推荐）
-
-如果您有域名，建议配置 HTTPS:
-
-```bash
-apt install -y certbot python3-certbot-nginx
-certbot --nginx -d 您的域名
-```
-
-按照提示完成 SSL 证书的安装，并更新前端环境变量以使用 https 和 wss 协议。
-
-## 故障排查
-
-### 1. 检查服务状态
-
-```bash
-# 检查Nginx状态
-systemctl status nginx
-
-# 检查MongoDB状态
-systemctl status mongod
-
-# 检查Node.js应用状态
-pm2 status
-pm2 logs
-```
-
-### 2. 常见问题解决方案
-
-- **前端无法访问**: 检查Nginx配置和状态
-- **API请求失败**: 检查后端服务是否正常运行，检查PM2日志
-- **WebSocket连接失败**: 
-  - 检查防火墙设置，确保端口开放
-  - 检查前端环境变量中的`VITE_WS_URL`是否正确配置为服务器地址
-  - 检查Nginx配置是否正确代理WebSocket连接
-  - 查看浏览器控制台错误信息，常见错误是WebSocket尝试连接到localhost而不是服务器地址
-
-### 3. 解决WebSocket连接错误
-
-如果在浏览器控制台看到类似以下错误：
-```
-WebSocket connection to 'ws://114.55.138.4:3001/document-xxx' failed
-```
-
-这可能是由以下原因导致：
-
-1. **防火墙阻止WebSocket连接**（最常见原因）：
-   
-   确保服务器防火墙允许3001端口的TCP连接：
-   ```bash
-   # 检查当前防火墙规则
-   sudo ufw status
-   
-   # 如果3001端口未开放，添加规则允许该端口
-   sudo ufw allow 3001/tcp
-   
-   # 重新加载防火墙规则
-   sudo ufw reload
-   ```
-   
-   如果使用阿里云、腾讯云等云服务器，还需要在云服务控制台的安全组中添加入站规则，允许3001端口的TCP连接。
-   
-   阿里云安全组配置步骤：
-   1. 登录阿里云控制台
-   2. 进入ECS实例详情页
-   3. 点击"安全组" -> "配置规则"
-   4. 添加入方向规则：协议类型TCP，端口范围3001/3001，授权对象0.0.0.0/0
-
-2. **Nginx配置问题**：
-   检查Nginx配置文件中的WebSocket代理设置是否正确：
-   ```
-   # 确保有正确的WebSocket代理配置
-   location /ws {
-       proxy_pass http://localhost:3001;
-       proxy_http_version 1.1;
-       proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection "Upgrade";
-       proxy_set_header Host $host;
-       proxy_read_timeout 300s;  # 增加超时时间防止长连接断开
-       proxy_send_timeout 300s;
-   }
-   ```
-
-3. **环境变量配置**：
-   确保前端项目的`.env`文件中正确配置了WebSocket URL：
-   ```
-   # 在本地项目的frontend/.env文件中
-   VITE_API_URL=http://114.55.138.4:3001/api
-   VITE_WS_URL=ws://114.55.138.4:3001
-   ```
-   
-   修改后需要重新构建前端并部署：
-   ```bash
-   cd /var/www/online-doc
-   pnpm build:frontend
-   # 然后通过CI/CD部署或手动部署
-   ```
-
-4. **后端WebSocket服务未正常运行**：
-   检查后端服务日志：
-   ```bash
-   pm2 logs online-doc-backend
-   ```
-   
-   确保后端服务正确监听WebSocket连接：
-   ```bash
-   # 检查是否有进程监听3001端口
-   netstat -tulpn | grep 3001
-   ```
-
-5. **CORS问题**：
-   确保后端的CORS设置允许来自前端域名的WebSocket连接：
-   ```javascript
-   // 在backend/src/index.ts中
-   app.use(cors({
-     origin: ['http://114.55.138.4', 'https://your-domain.com'],
-     credentials: true
-   }));
-   ```
-
-6. **连接超时**：
-   如果WebSocket连接尝试建立但超时，可能是网络延迟问题。可以尝试增加连接超时时间：
-   ```javascript
-   // 在前端的CollaborativeEditor.vue中
-   provider = new WebsocketProvider(
-     import.meta.env.VITE_WS_URL || 'ws://localhost:3001', 
-     `document-${props.documentId}`, 
-     ydoc,
-     { 
-       params,
-       connect: true,
-       maxBackoffTime: 10000 // 增加最大重连等待时间
-     }
-   )
-   ```
-
-7. **直接使用端口访问而不通过Nginx代理**：
-   如果上述方法都不起作用，可以尝试直接使用3001端口连接WebSocket，绕过Nginx代理：
-   ```
-   # 修改前端环境变量
-   VITE_WS_URL=ws://114.55.138.4:3001
-   ```
-   
-   并确保服务器防火墙和云服务安全组都允许3001端口的访问。
-
-实施上述解决方案后，重启服务并刷新浏览器页面，WebSocket连接问题应该得到解决。
-
-### 4. 更新部署
-
-当有新的代码推送到 GitHub 仓库的 main 分支时，CI/CD 流程会自动触发部署。如果需要手动更新，可以执行以下步骤:
-
-```bash
-cd /var/www/online-doc
-git pull
-pnpm install
-pnpm build
-pm2 reload ecosystem.config.js
-```
-
----
-
-部署完成后，您的协同文档编辑系统已经成功部署并配置了自动化 CI/CD 流程。用户可以通过访问 `http://114.55.138.4` 或您的域名使用系统。
